--- a/package.json
+++ b/package.json
@@ -1,17 +1,32 @@
 {
-  "name": "express-practice",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "nodemon ./bin/www"
-  },
-  "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "morgan": "~1.9.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  }
+   "name": "express-practice",
+   "version": "0.0.0",
+   "private": true,
+   "scripts": {
+      "start": "nodemon src/index.ts",
+      "typeorm": "typeorm-ts-node-commonjs",
+      "lint": "eslint . --ext .ts"
+   },
+   "dependencies": {
+      "cookie-parser": "~1.4.4",
+      "debug": "~2.6.9",
+      "express": "~4.16.1",
+      "morgan": "~1.9.1",
+      "pg": "^8.4.0",
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "0.3.17"
+   },
+   "devDependencies": {
+      "@types/cookie-parser": "^1.4.4",
+      "@types/debug": "^4.1.8",
+      "@types/express": "^4.17.17",
+      "@types/morgan": "^1.9.5",
+      "@types/node": "^16.18.52",
+      "@typescript-eslint/eslint-plugin": "^6.7.2",
+      "@typescript-eslint/parser": "^6.7.2",
+      "eslint": "^8.49.0",
+      "nodemon": "^3.0.1",
+      "ts-node": "10.7.0",
+      "typescript": "4.5.2"
+   }
 }
