chore: set up relative paths in ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,12 @@
       "noImplicitOverride": true,
       "removeComments": true,
       "incremental": true,
-      "strictPropertyInitialization": false
+      "strictPropertyInitialization": false,
+      "rootDirs": ["src"],
+      "baseUrl": "src",
+      "paths": {
+         "@/*": ["*"]
+       },
    },
    "compileOnSave": false
 }
