--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "quotes": [2, "single"],
     "semi": ["error", "always"],
     "eol-last": ["error", "always"],
-    "comma-dangle": ["error", "never"]
+    "comma-dangle": ["error", "never"],
+    "@typescript-eslint/no-unused-vars": 1
   }
 }
