--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
    "version": "0.0.0",
    "private": true,
    "scripts": {
-      "start": "nodemon src/index.ts",
+      "start": "nodemon -r tsconfig-paths/register src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs",
       "lint": "eslint . --ext .ts"
    },
@@ -27,6 +27,7 @@
       "eslint": "^8.49.0",
       "nodemon": "^3.0.1",
       "ts-node": "10.7.0",
+      "tsconfig-paths": "^4.2.0",
       "typescript": "4.5.2"
    }
 }
