--- a/package.json
+++ b/package.json
@@ -8,18 +8,23 @@
       "lint": "eslint . --ext .ts"
    },
    "dependencies": {
+      "bcrypt": "^5.1.1",
       "cookie-parser": "~1.4.4",
       "debug": "~2.6.9",
       "express": "~4.16.1",
+      "joi": "^17.10.2",
+      "jsonwebtoken": "^9.0.2",
       "morgan": "~1.9.1",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.17"
    },
    "devDependencies": {
+      "@types/bcrypt": "^5.0.0",
       "@types/cookie-parser": "^1.4.4",
       "@types/debug": "^4.1.8",
       "@types/express": "^4.17.17",
+      "@types/jsonwebtoken": "^9.0.3",
       "@types/morgan": "^1.9.5",
       "@types/node": "^16.18.52",
       "@typescript-eslint/eslint-plugin": "^6.7.2",
