--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,6 @@ DB_NAME= // Database name
 POSTGRESQL_HOST=localhost
 DB_PORT=5432
 DEBUG=express-practice:*
-REDIS_URL=
+REDIS_URL= // Your local Redis instance URL
 JWT_SECRET_KEY=
 JWT_EXPIRES_IN=
