doc: update envs example

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,11 @@ PORT=8000
 DB_USERNAME= // Database role
 DB_PASSWORD= // Database role password
 DB_NAME= // Database name
-POSTGRESQL_HOST=localhost
-DB_PORT=5432
+POSTGRESQL_HOST= // Database host - localhost or host name given in docker
+DB_PORT=5432 // Port where service its exposed
 DEBUG=express-practice:*
-REDIS_URL= // Your local Redis instance URL
+REDIS_URL= // Your local Redis instance URL - redis://{localhost or host name given in docker}:{port where service its exposed}
 JWT_SECRET_KEY=
 JWT_EXPIRES_IN=
+PGADMIN_MAIL= // Email to login to PgAdmin from Docker
+PGADMIN_PW= // Password to login to PgAdmin from Docker
