chore: add app volume for node_modules

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "8000:3000"
     volumes:
       - ./:/app
+      - /app/node_modules
   redis:
     container_name: app-redis
     image: "redis:alpine"
