--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
    "scripts": {
       "start": "nodemon -r tsconfig-paths/register src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs",
-      "lint": "eslint . --ext .ts"
+      "lint": "eslint . --ext .ts",
+      "test": "jest"
    },
    "dependencies": {
       "bcrypt": "^5.1.1",
@@ -22,6 +23,7 @@
       "typeorm": "0.3.17"
    },
    "devDependencies": {
+      "@jest/globals": "^29.7.0",
       "@types/bcrypt": "^5.0.0",
       "@types/cookie-parser": "^1.4.4",
       "@types/debug": "^4.1.8",
@@ -29,10 +31,14 @@
       "@types/jsonwebtoken": "^9.0.3",
       "@types/morgan": "^1.9.5",
       "@types/node": "^16.18.52",
+      "@types/supertest": "^2.0.15",
       "@typescript-eslint/eslint-plugin": "^6.7.2",
       "@typescript-eslint/parser": "^6.7.2",
       "eslint": "^8.49.0",
+      "jest": "^29.7.0",
       "nodemon": "^3.0.1",
+      "supertest": "^6.3.3",
+      "ts-jest": "^29.1.1",
       "ts-node": "10.7.0",
       "tsconfig-paths": "^4.2.0",
       "typescript": "4.5.2"
